{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 158,
  "lineage": "8759f1c2-f246-74d9-66e7-53a0cbf82fb7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "efs_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-05bb9c5953b444440",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:subnet/subnet-05bb9c5953b444440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 246,
            "cidr_block": "192.168.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb9c5953b444440",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202712151808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "dev_PublicSubnet1",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          }
        },
        {
          "index_key": "subnet-0f1e2081eb1b9dff8",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:subnet/subnet-0f1e2081eb1b9dff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 198,
            "cidr_block": "192.168.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e2081eb1b9dff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202712151808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "dev_PublicSubnet2",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:internet-gateway/igw-05b9a036e2da442b9",
            "id": "igw-05b9a036e2da442b9",
            "owner_id": "202712151808",
            "tags": {
              "Name": "dev_InternetGateway"
            },
            "tags_all": {
              "Name": "dev_InternetGateway"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05b9a036e2da442b9",
            "id": "r-rtb-0843c0dacabf027981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0843c0dacabf02798",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:route-table/rtb-0859eb5e5c049ecb0",
            "id": "rtb-0859eb5e5c049ecb0",
            "owner_id": "202712151808",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev_PrivateRouteTable"
            },
            "tags_all": {
              "Name": "dev_PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:route-table/rtb-0843c0dacabf02798",
            "id": "rtb-0843c0dacabf02798",
            "owner_id": "202712151808",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b9a036e2da442b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_PublicRouteTable"
            },
            "tags_all": {
              "Name": "dev_PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-sub1-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e597daaad4ba407",
            "route_table_id": "rtb-0859eb5e5c049ecb0",
            "subnet_id": "subnet-00541adaa15b25b97"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.priv_sub1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-sub2-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029eb9e7d95313530",
            "route_table_id": "rtb-0859eb5e5c049ecb0",
            "subnet_id": "subnet-08ad12807a0c5a969"
          },
          "dependencies": [
            "aws_route_table.priv_rt",
            "aws_subnet.priv_sub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub1-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c0068a2412b2d2",
            "route_table_id": "rtb-0843c0dacabf02798",
            "subnet_id": "subnet-05bb9c5953b444440"
          },
          "dependencies": [
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub2-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c47e3aca7e5cc842",
            "route_table_id": "rtb-0843c0dacabf02798",
            "subnet_id": "subnet-0f1e2081eb1b9dff8"
          },
          "dependencies": [
            "aws_route_table.pub_rt",
            "aws_subnet.pub_sub2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:security-group/sg-0c127e3efd7c3dab5",
            "description": "Allow NodePort traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c127e3efd7c3dab5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow NodePort access for NGINX",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-eks-node-sg",
            "name_prefix": "",
            "owner_id": "202712151808",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-eks-node-sg"
            },
            "tags_all": {
              "Name": "dev-eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_nodeports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3009029939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c127e3efd7c3dab5",
            "security_group_rule_id": "sgr-078aaebb6c1aab435",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3434930434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c127e3efd7c3dab5",
            "security_group_rule_id": "sgr-00c37ffd5914c7cb7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.node",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:subnet/subnet-00541adaa15b25b97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00541adaa15b25b97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202712151808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_PrivateSubnet1",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "tags_all": {
              "Name": "dev_PrivateSubnet1",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:subnet/subnet-08ad12807a0c5a969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ad12807a0c5a969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202712151808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_PrivateSubnet2",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "tags_all": {
              "Name": "dev_PrivateSubnet2",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:subnet/subnet-05bb9c5953b444440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bb9c5953b444440",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202712151808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_PublicSubnet1",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "tags_all": {
              "Name": "dev_PublicSubnet1",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:subnet/subnet-0f1e2081eb1b9dff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1e2081eb1b9dff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "202712151808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_PublicSubnet2",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "tags_all": {
              "Name": "dev_PublicSubnet2",
              "kubernetes.io/cluster/dev-eks": "shared"
            },
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:vpc/vpc-034e4829818cd3646",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08b559f93a18ed5c8",
            "default_route_table_id": "rtb-0b599df42553da2ed",
            "default_security_group_id": "sg-08b5e674aad6b53d5",
            "dhcp_options_id": "dopt-02175085fb8daa0a9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034e4829818cd3646",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b599df42553da2ed",
            "owner_id": "202712151808",
            "tags": {
              "Name": "dev_VPC"
            },
            "tags_all": {
              "Name": "dev_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202712151808:security-group/sg-0924a4ced8ea97b1c",
            "description": "Example EFS security group",
            "egress": [],
            "id": "sg-0924a4ced8ea97b1c",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.0/24",
                  "192.168.2.0/24"
                ],
                "description": "NFS ingress from VPC private subnets",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-test",
            "name_prefix": "",
            "owner_id": "202712151808",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "dev",
              "Name": "efs-test",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "efs-test",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-034e4829818cd3646"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.1.0/24",
              "192.168.2.0/24"
            ],
            "description": "NFS ingress from VPC private subnets",
            "from_port": 2049,
            "id": "sgrule-1861697664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0924a4ced8ea97b1c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_subnet.efs_subnets",
            "module.efs.aws_security_group.this"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}